--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="/components/queue/queue.dir.js" defer></script>
     <script type="text/javascript" src="/components/utils/emutils.srv.js" defer></script>
     <script type="text/javascript" src="/components/eq/emeq.srv.js" defer></script>
+    <script type="text/javascript" src="/components/eq/eq.dir.js" defer></script>
     <script type="text/javascript" src="/components/player/emplayer.srv.js" defer></script>
     <script type="text/javascript" src="/components/player/player.dir.js" defer></script>
     <script type="text/javascript" src="/components/library/library.srv.js" defer></script>
@@ -24,25 +25,7 @@
 <body ng-controller="EMController">
     <h1>Evil Music</h1>
     <div>
-        <div><h2>EQ</h2></div>
-        <div>
-            <div class="eq-node-slider-div" ng-repeat="node in eq.eq.nodes">
-                <div class="centered">
-                    {{emUtils.hertzToString(node.frequency)}}
-                </div>
-                <div class="centered">
-                    <input class="eq-node-slider"
-                           type="range" min="-40" max="10" step="0.1" orient="vertical"
-                           ng-model="node.gain" ng-change="eq.updateNodeGain(node)"/>
-                </div>
-                <div class="centered">
-                    <input class="width-45"
-                           type="number" min="-10" max="10" step="0.1"
-                           ng-model="node.gain" ng-change="eq.updateNodeGain(node)"/>
-                </div>
-            </div>
-            <div style="clear:both"></div>
-        </div>
+        <em-eq></em-eq>
     </div>
     <div>
         <em-player-controls></em-player-controls>
