--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Evil Music</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/evilmusic.css">
     <script type="text/javascript" src="/assets/libs/aurora.js" defer></script>
     <script type="text/javascript" src="/assets/libs/flac.js" defer></script>
     <script type="text/javascript" src="/assets/libs/jquery.js" defer></script>
     <script type="text/javascript" src="/assets/libs/angular.js" defer></script>
-    <script type="text/javascript" src="/evilmusic.js" defer></script>
+    <script type="text/javascript" src="/assets/libs/bootstrap.js" defer></script>
+    <script type="text/javascript" src="/index.js" defer></script>
     <script type="text/javascript" src="/components/evilmusic/evilmusic.dir.js" defer></script>
     <script type="text/javascript" src="/components/progressbar/progressbar.dir.js" defer></script>
     <script type="text/javascript" src="/components/volumecontrol/volumecontrol.dir.js" defer></script>
@@ -22,6 +25,6 @@
     <script type="text/javascript" src="/components/library/library.srv.js" defer></script>
     <script type="text/javascript" src="/components/library/library.dir.js" defer></script>
 </head>
-<body>
+<body class="container-fluid">
     <evil-music></evil-music>
 </body>
