--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,32 +14,13 @@
     <title>Evil Music</title>
     
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-theme.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/evilmusic.css">
+    <link rel="stylesheet" type="text/css" href="/dist/css/evilmusic-third-party.css">
+    <link rel="stylesheet" type="text/css" href="/dist/css/evilmusic.css">
     
     <!-- JavaScript -->
-    <script type="text/javascript" src="/assets/libs/aurora.js" defer></script>
-    <script type="text/javascript" src="/assets/libs/flac.js" defer></script>
-    <script type="text/javascript" src="/assets/libs/jquery.js" defer></script>
-    <script type="text/javascript" src="/assets/libs/angular.js" defer></script>
-    <script type="text/javascript" src="/assets/libs/angular-resource.js" defer></script>
-    <script type="text/javascript" src="/assets/libs/bootstrap.js" defer></script>
-    <script type="text/javascript" src="/index.js" defer></script>
-    <script type="text/javascript" src="/components/evilmusic/evilmusic.dir.js" defer></script>
-    <script type="text/javascript" src="/components/resources/library.res.js" defer></script>
-    <script type="text/javascript" src="/components/resources/queue.res.js" defer></script>
-    <script type="text/javascript" src="/components/progressbar/progressbar.dir.js" defer></script>
-    <script type="text/javascript" src="/components/volumecontrol/volumecontrol.dir.js" defer></script>
-    <script type="text/javascript" src="/components/queue/queue.srv.js" defer></script>
-    <script type="text/javascript" src="/components/queue/queue.dir.js" defer></script>
-    <script type="text/javascript" src="/components/utils/emutils.srv.js" defer></script>
-    <script type="text/javascript" src="/components/eq/eq.srv.js" defer></script>
-    <script type="text/javascript" src="/components/eq/eq.dir.js" defer></script>
-    <script type="text/javascript" src="/components/player/player.srv.js" defer></script>
-    <script type="text/javascript" src="/components/player/player.dir.js" defer></script>
-    <script type="text/javascript" src="/components/library/library.srv.js" defer></script>
-    <script type="text/javascript" src="/components/library/library.dir.js" defer></script>
+    <script type="text/javascript" src="/dist/evilmusic-third-party.js" defer></script>
+    <script type="text/javascript" src="/dist/evilmusic.js" defer></script>
+    <script type="text/javascript" src="/dist/evilmusic-templates.js" defer></script>
 </head>
 <body class="container-fluid">
     <evil-music></evil-music>
