[#53] Started upgrade to Angular 2.
Started the upgrade to Angular 2.  Created a proof-of-concept component and service.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,5 +41,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="/dist/evilmusic-templates.js" defer></script>
 </head>
 <body class="container-fluid">
+    <ng2-example></ng2-example>
     <evil-music></evil-music>
 </body>
